@@ -1,6 +1,12 @@
 # ChangeLog for net-firewall/shorewall-shell
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.22 2009/02/22 13:51:31 pva Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-firewall/shorewall-shell/Attic/ChangeLog,v 1.23 2009/02/28 18:44:45 pva Exp $
+
+  28 Feb 2009; Peter Volkov <pva@gentoo.org> -shorewall-shell-4.0.12.ebuild,
+  -shorewall-shell-4.0.13.ebuild, -shorewall-shell-4.0.13.1.ebuild,
+  -shorewall-shell-4.0.14.1.ebuild, shorewall-shell-4.0.15.ebuild,
+  -shorewall-shell-4.2.0.ebuild, -shorewall-shell-4.2.1.ebuild:
+  Removed old, bug #256064. Fixed RDEPEND repoman warning.
 
 *shorewall-shell-4.2.6 (22 Feb 2009)
 
